--- a/extension-yueliu1/manifest.json
+++ b/extension-yueliu1/manifest.json
@@ -20,8 +20,8 @@
   "content_security_policy": {
     //"extension_pages": "default-src 'none'; script-src 'self'; style-src 'unsafe-inline'; base-uri 'self'; form-action 'none'; frame-ancestors 'none'; require-trusted-types-for 'script'; trusted-types 'none'"
   },
-  "background": {
-    //"service_worker": "background.js"
-  },
-  "permissions": [ "bookmarks", "tabs", "favicon", "history"]
+  //"background": {
+  //  "service_worker": "js/background.js"
+  //},
+  "permissions": [ "bookmarks", "tabs", "favicon", "history", "activeTab"]
 }
